// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbortButton Renders a clickable button 1`] = `
<NavItem
  key="abort-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f011",
            "M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z",
          ],
          "iconName": "power-off",
          "prefix": "fas",
        }
      }
      key="toolbar-abort"
      onClick={[MockFunction]}
      title="Abort Testplan"
    />
  </div>
</NavItem>
`;

exports[`AbortButton Renders a spinning icon when abortion is in-progress 1`] = `
<NavItem
  key="abort-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu-o_O-toolbarInactive_51g7gx"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f011",
            "M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z",
          ],
          "iconName": "power-off",
          "prefix": "fas",
        }
      }
      key="toolbar-abort"
      title="Aborting..."
    />
  </div>
</NavItem>
`;

exports[`ReloadButton Renders a clickable button 1`] = `
<NavItem
  key="reload-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f021",
            "M440.935 12.574l3.966 82.766C399.416 41.904 331.674 8 256 8 134.813 8 33.933 94.924 12.296 209.824 10.908 217.193 16.604 224 24.103 224h49.084c5.57 0 10.377-3.842 11.676-9.259C103.407 137.408 172.931 80 256 80c60.893 0 114.512 30.856 146.104 77.801l-101.53-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12h-47.411c-6.853 0-12.315 5.729-11.987 12.574zM256 432c-60.895 0-114.517-30.858-146.109-77.805l101.868 4.871c6.845.327 12.573-5.134 12.573-11.986v-47.412c0-6.627-5.373-12-12-12H12c-6.627 0-12 5.373-12 12V500c0 6.627 5.373 12 12 12h47.385c6.863 0 12.328-5.745 11.985-12.599l-4.129-82.575C112.725 470.166 180.405 504 256 504c121.187 0 222.067-86.924 243.704-201.824 1.388-7.369-4.308-14.176-11.807-14.176h-49.084c-5.57 0-10.377 3.842-11.676 9.259C408.593 374.592 339.069 432 256 432z",
          ],
          "iconName": "sync",
          "prefix": "fas",
        }
      }
      key="toolbar-reload"
      onClick={[MockFunction]}
      title="Reload code"
    />
  </div>
</NavItem>
`;

exports[`ReloadButton Renders a spinning icon when reload is in-progress 1`] = `
<NavItem
  key="reload-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu-o_O-toolbarInactive_51g7gx"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f021",
            "M440.935 12.574l3.966 82.766C399.416 41.904 331.674 8 256 8 134.813 8 33.933 94.924 12.296 209.824 10.908 217.193 16.604 224 24.103 224h49.084c5.57 0 10.377-3.842 11.676-9.259C103.407 137.408 172.931 80 256 80c60.893 0 114.512 30.856 146.104 77.801l-101.53-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12h-47.411c-6.853 0-12.315 5.729-11.987 12.574zM256 432c-60.895 0-114.517-30.858-146.109-77.805l101.868 4.871c6.845.327 12.573-5.134 12.573-11.986v-47.412c0-6.627-5.373-12-12-12H12c-6.627 0-12 5.373-12 12V500c0 6.627 5.373 12 12 12h47.385c6.863 0 12.328-5.745 11.985-12.599l-4.129-82.575C112.725 470.166 180.405 504 256 504c121.187 0 222.067-86.924 243.704-201.824 1.388-7.369-4.308-14.176-11.807-14.176h-49.084c-5.57 0-10.377 3.842-11.676 9.259C408.593 374.592 339.069 432 256 432z",
          ],
          "iconName": "sync",
          "prefix": "fas",
        }
      }
      key="toolbar-reload"
      spin={true}
      title="Reloading..."
    />
  </div>
</NavItem>
`;

exports[`ResetButton Renders a clickable button 1`] = `
<NavItem
  key="reset-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f049",
            "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
          ],
          "iconName": "fast-backward",
          "prefix": "fas",
        }
      }
      key="toolbar-reset"
      onClick={[MockFunction]}
      title="Reset all MultiTest environments and reports"
    />
  </div>
</NavItem>
`;

exports[`ResetButton Renders a spinning icon when reset is in-progress 1`] = `
<NavItem
  key="reset-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu-o_O-toolbarInactive_51g7gx"
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f049",
            "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
          ],
          "iconName": "fast-backward",
          "prefix": "fas",
        }
      }
      key="toolbar-reset"
      title="Resetting..."
    />
  </div>
</NavItem>
`;

exports[`RunAllButton Renders a clickable button 1`] = `
<NavItem
  key="runall-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu"
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [],
            "f04b",
            "M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z",
          ],
          "iconName": "play",
          "prefix": "fas",
        }
      }
      key="toolbar-runall"
      onClick={[MockFunction]}
      title="Run all tests"
    />
  </div>
</NavItem>
`;

exports[`RunAllButton Renders an inactive icon when running is in-progress 1`] = `
<NavItem
  key="runall-button"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      className="toolbarButton_1ueb7gu-o_O-toolbarInactive_51g7gx"
      icon={
        Object {
          "icon": Array [
            384,
            512,
            Array [],
            "f254",
            "M360 64c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24 0 90.965 51.016 167.734 120.842 192C75.016 280.266 24 357.035 24 448c-13.255 0-24 10.745-24 24v16c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24v-16c0-13.255-10.745-24-24-24 0-90.965-51.016-167.734-120.842-192C308.984 231.734 360 154.965 360 64z",
          ],
          "iconName": "hourglass",
          "prefix": "fas",
        }
      }
      key="toolbar-runall"
      spin={true}
      title="Running tests..."
    />
  </div>
</NavItem>
`;
